--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,11 +2,18 @@ import = [
    "~/.config/alacritty/catppuccin-mocha.toml"
 ]
 
+live_config_reload = true
+
 [window]
-opacity = 0.95
+opacity = 0.75
+blur = true
+startup_mode = "Windowed"
 
 [env]
 TERM = "xterm-256color"
+
+[scrolling]
+history = 20000
 
 [font]
 size = 15
