--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".zsh/plugins/zsh-z"]
 	path = .zsh/plugins/zsh-z
 	url = https://github.com/agkozak/zsh-z.git
+[submodule ".tmux/plugins/catppuccin"]
+	path = .tmux/plugins/catppuccin
+	url = https://git::@github.com/catppuccin/tmux
