--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 # ----- List of plugins
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 #  ----- Set theme for Tmux
+run ~/.tmux/plugins/catppuccin/catppuccin.tmux
 set -g @catppuccin_flavour 'mocha'
 
 #  ----- Enable mouse
@@ -23,6 +23,10 @@ unbind %
 
 # Easy reload
 bind r source-file ~/.tmux.conf
+
+# ---- Auto install plugins on clean install
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 #  ----- Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
